- Fixed: Nav bar height in multiple modes - Fixed: Incorrect sidebar height in compact mode - Fixed: Incorrect sidebar alignment - Fixed: Pseudobackground height in multiple modes - Changed: Pseudobackground transition timings

--- a/NeoZen/Theme/Sidebar/Compact/Sidebar-Alignment.css
+++ b/NeoZen/Theme/Sidebar/Compact/Sidebar-Alignment.css
@@ -1,3 +1,47 @@
+/* Fixes height alignment for compact mode - collapsed - multiple toolbar - only hidden tab bar */
+
+
+@media not (-moz-pref("zen.view.compact.hide-toolbar")) {
+  /* Height adjustment when toolbar is not hidden */
+  :root:not([zen-single-toolbar="true"]):not([zen-sidebar-expanded="true"]) body:has([zen-compact-mode="true"]) #titlebar {
+    height: calc(100% - (var(--zen-element-separation) * 1.2))  !important;
+    max-height: unset !important;
+    top: calc(var(--zen-element-separation) * 2) !important;
+  }
+}
+
+/* Fixes height alignment for compact mode - expanded - multiple toolbar - only hidden tab bar */
+
+@media not (-moz-pref("zen.view.compact.hide-toolbar")) {
+  /* Height adjustment when toolbar is not hidden */
+  :root:not([zen-single-toolbar="true"])[zen-sidebar-expanded="true"] body:has([zen-compact-mode="true"]) #titlebar {
+    height: calc(100% - (var(--zen-element-separation) * 2.5))  !important;
+    max-height: unset !important;
+    top: calc(var(--zen-element-separation) * 2) !important;
+  }
+}
+
+/* Fixes height alignment for compact mode - expanded - multiple toolbar - hidden both */
+
+@media (-moz-pref("zen.view.compact.hide-toolbar")) {
+  /* Height adjustment when toolbar is not hidden */
+  :root:not([zen-single-toolbar="true"])[zen-sidebar-expanded="true"] body:has([zen-compact-mode="true"]) #titlebar {
+    height: calc(100% - (var(--zen-element-separation) * 2))  !important;
+    max-height: unset !important;
+    top: calc(var(--zen-element-separation) * 0.5) !important;
+  }
+}
+
+/* Fixes height alignment for compact mode - expanded - singletoolbar - hidden both */
+@media (-moz-pref("zen.view.compact.hide-tabbar")) {
+  :root[zen-single-toolbar="true"][zen-sidebar-expanded="true"] body:has([zen-compact-mode="true"]) #titlebar {
+    height: calc(100% - (var(--zen-element-separation) * 1))  !important;
+    max-height: unset !important;
+    top: calc(var(--zen-element-separation) * 0.45) !important;
+  }
+}
+
+/* Side alignment */
 @media (-moz-pref("zen.view.compact.hide-tabbar")) {
   /* Positioning for compact sidebar at the left */
   :root:not([zen-right-side="true"]) body:has([zen-compact-mode="true"]) #titlebar {
@@ -15,41 +59,4 @@
     left: auto !important;
     right: calc(var(--zen-element-separation) / 0.8) !important;
   }
-}
-
-:root[zen-single-toolbar="true"] body:has([zen-compact-mode="true"]) #titlebar {
-  height: calc(100% - (var(--zen-element-separation) * 1)) !important;
-  margin-top: calc(var(--zen-element-separation) * 0.5) !important;
-}
-
-@media (-moz-pref("zen.view.compact.hide-toolbar")) {
-  /* Height adjustment when toolbar is hidden */
-  :root body:has([zen-compact-mode="true"]) #titlebar {
-    height: calc(100% - (var(--zen-element-separation) * 1.8)) !important;
-    margin-top: calc(var(--zen-element-separation) * 1.45) !important;
-  }
-}
-
-@media not (-moz-pref("zen.view.compact.hide-toolbar")) {
-  /* Height adjustment when toolbar is not hidden */
-  :root:not([zen-single-toolbar="true"]) body:has([zen-compact-mode="true"]) #titlebar {
-    height: calc(100% - (var(--zen-element-separation) * 2.5)) !important;
-    margin-top: calc(var(--zen-element-separation) * 2) !important;
-  }
-}
-
-/* Fix issue from nebula when sidebar is at the right side not taking the correct position due to the navigator-toolbox width */
-:root[zen-right-side="true"][zen-compact-mode="true"] #navigator-toolbox{
-    width: var(--Neo-Width-Compact-Expanded) !important;
-}
-
-/* Adjustments for compact sidebar expanded mode */
-:root[zen-compact-mode="true"][zen-sidebar-expanded="true"] #sidebar {
-    width: var(--Neo-Width-Compact-Expanded) !important;
-    min-width: calc(var(--Neo-Width-Compact-Expanded) - 8px) !important;
-}
-/* Adjustments for compact sidebar expanded mode */
-:root[zen-sidebar-expanded="true"] body:has([zen-compact-mode="true"]) #titlebar{
-    width: var(--Neo-Width-Compact-Expanded) !important;
-    min-width: calc(var(--Neo-Width-Compact-Expanded) - 8px) !important;
 }
